# riscv-elf-parse

./: .gitignore  Cargo.toml  README.md  disasm.s  test.s
examples/: simple.rs
src/: lib.rs  main.rs
